# coursera-ibm-data-science

./: DataScienceEcosystem.ipynb  Jupyter_Notebook.ipynb  pyproject.toml
src/: .gitignore  4.3_Plotly_Basics.ipynb  DA0101EN-2-Review-Data-Wrangling-20231003-1696291200.jupyterlite.ipynb  DA0101EN-4-Review-Model-Development-20231003-1696291200.jupyterlite.ipynb  DA0101EN-Review-Introduction-20231003-1696291200.jupyterlite.ipynb  DB0201EN-Week3-1-3-SQLmagic-SQlite-v2.ipynb  DB0201EN-Week3-1-4-Analyzing-SQLite-v2.ipynb  DB0201EN-Week4-1-1-RealDataPractice-v5-sqlite-Learner-v2.ipynb  DS0103EN-Exercise-From-Modeling-to-Evaluation.ipynb  DS0103EN-Exercise-From-Understanding-to-Preparation.ipynb  DS0103EN-Review-From-Requirements-to-Collection-v1.ipynb  DV0101EN-Final-Assign-Part1.ipynb  DataScienceEcosystem.ipynb  Decision-tree-classifier-drug-pred-v1.ipynb  Exploratory_data_analysis.jupyterlite.ipynb  Exploratory_data_analysis_cars.ipynb  Final Assignment Webscraping-v2.ipynb  Final_assignment_Library.ipynb  House_Sales_in_King_Count_USA.ipynb  KNN-lab-v1.ipynb  Logistic-Regression-v1.ipynb  Mulitple-Linear-Regression-v1.ipynb  Multi-class-Classification-V2.ipynb  Practice_Assignment_Part1.jupyterlite.ipynb  Practice_data_loading.jupyterlite.ipynb  Regression-Trees-Taxi-Tip-v1.ipynb  Simple-Linear-Regression-v1.ipynb  WebScraping_Review_Lab.ipynb  dash_interactivity_barplot.py  dash_interactivty.py  decision-tree-svm-ccFraud-v1.ipynb  mod5-final-project-v2.ipynb  model_evaluation.ipynb  practice_data_wrangling.jupyterlite.ipynb
