[project]
name = "coursera-ibm-data-science"
version = "0.1.0"
description = ""
authors = [{ name = "JeremyGu2021", email = "jgu@apra.com.au" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "numpy (==1.26.4)",
    "pandas (==2.2.2)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.4,<2.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "html5lib (>=1.1,<2.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "ipython-sql (>=0.5.0,<0.6.0)",
    "prettytable (>=3.16.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "packaging (>=25.0,<26.0)",
    "dash (>=3.2.0,<4.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[tool.hatch.build.targets.sdist]
include = ["src/coursera_ibm_data_science"]

[tool.hatch.build.targets.wheel]
include = ["src/coursera_ibm_data_science"]

[tool.hatch.build.targets.wheel.sources]
"src/coursera_ibm_data_science" = "coursera_ibm_data_science"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
