[project]
name = "coursera-ibm-data-science"
version = "0.1.0"
description = ""
authors = [{ name = "JeremyGu2021", email = "jgu@apra.com.au" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "numpy (>=2.2,<3.0)",                # 新增：强制走 NumPy 2.x（支持 3.13）
    "pandas (>=2.2.3,<3.0.0)",           # 升级：2.2.3+ 支持 3.13
    "matplotlib (>=3.8,<4.0.0)",         # 不必卡到 3.10.x，放宽到兼容区间更稳
    "scikit-learn (>=1.4,<2.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "html5lib (>=1.1,<2.0)",
    "plotly (>=5,<7)",                   # 你原来写 6.2.0，如解析失败可先放宽到 5.x–<7
    "nbformat (>=5.10.4,<6.0.0)",
    "ipython-sql (>=0.5.0,<0.6.0)",
    "prettytable (>=3.16.0,<4.0.0)",
    "seaborn (>=0.13,<0.14)",
    "scipy (>=1.14.1,<2.0.0)",           # 调整到官方已发布的稳定版本
    "packaging (>=25.0,<26.0)",
    "dash (>=3.2.0,<4.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[tool.hatch.build.targets.sdist]
include = ["src/coursera_ibm_data_science"]

[tool.hatch.build.targets.wheel]
include = ["src/coursera_ibm_data_science"]

[tool.hatch.build.targets.wheel.sources]
"src/coursera_ibm_data_science" = "coursera_ibm_data_science"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
